<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/distance_choice"
        style="@style/text_label"
        android:layout_centerHorizontal="true"
        android:text="@string/distance_label_wildcard"
        android:textColor="@android:color/black" />

    <SeekBar
        android:id="@+id/distance_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distance_choice"
        android:layout_marginBottom="@dimen/item_padding"
        android:layout_marginTop="@dimen/item_padding"
        android:progressDrawable="@drawable/apptheme_scrubber_progress_horizontal_holo_light"
        android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"/>

    <LinearLayout
        android:id="@+id/max_distance_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distance_seekbar"
        android:orientation="horizontal">

        <Button
            android:id="@+id/randomise_journey_button"
            style="@style/general_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/randomise_map_btn_label" />

        <Button
            android:id="@+id/create_journey_button"
            style="@style/general_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/get_lost_btn_label" />

    </LinearLayout>

</RelativeLayout>